@@ -8,11 +8,10 @@
 
 package org.elasticsearch.painless.spi;
 
-import java.util.AbstractMap;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
@@ -69,22 +68,12 @@ public class WhitelistMethod {
         List<String> canonicalTypeNameParameters,
         List<Object> painlessAnnotations
     ) {
-
         this.origin = Objects.requireNonNull(origin);
         this.augmentedCanonicalClassName = augmentedCanonicalClassName;
         this.methodName = methodName;
         this.returnCanonicalTypeName = Objects.requireNonNull(returnCanonicalTypeName);
-        this.canonicalTypeNameParameters = Collections.unmodifiableList(Objects.requireNonNull(canonicalTypeNameParameters));
-
-        if (painlessAnnotations.isEmpty()) {
-            this.painlessAnnotations = Collections.emptyMap();
-        } else {
-            this.painlessAnnotations = Collections.unmodifiableMap(
-                Objects.requireNonNull(painlessAnnotations)
-                    .stream()
-                    .map(painlessAnnotation -> new AbstractMap.SimpleEntry<>(painlessAnnotation.getClass(), painlessAnnotation))
-                    .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))
-            );
-        }
+        this.canonicalTypeNameParameters = List.copyOf(canonicalTypeNameParameters);
+        this.painlessAnnotations = painlessAnnotations.stream()
+            .collect(Collectors.toUnmodifiableMap(Object::getClass, Function.identity()));
     }
 }
